--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,16 +10,16 @@
         <br>
         <p>This is a faster, and less expensive lasagna.</p>
         <br>
-        <h1>Ingredients</h1>
+        <h2>Ingredients</h2>
         <ul>
-            <li>1 (16 ounce) package lasagna noodles<\li>
-            <li>1 pound lean ground beef<\li>
-            <li>salt and pepper to taste<\li>
-            <li>1 (16 ounce) jar spaghetti sauce<\li>
-            <li>1 clove garlic, minced<\li>
-            <li>½ pound shredded mozzarella cheese<\li>
-            <li>½ pound shredded Cheddar cheese<\li>
-            <li>1 pint ricotta cheese<\li>
+            <li>1 (16 ounce) package lasagna noodles</li>
+            <li>1 pound lean ground beef</li>
+            <li>salt and pepper to taste</li>
+            <li>1 (16 ounce) jar spaghetti sauce</li>
+            <li>1 clove garlic, minced</li>
+            <li>½ pound shredded mozzarella cheese</li>
+            <li>½ pound shredded Cheddar cheese</li>
+            <li>1 pint ricotta cheese</li>
         </ul>
         <h1>Steps</h1>
         <ol>
